--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Optional theme -->
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/matches.css">
+    <link rel="stylesheet" href="css/matches.min.css">
     <link rel="stylesheet" href="css/calendar.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 </head>
