--- a/index.html
+++ b/index.html
@@ -282,35 +282,35 @@
       var views = {
           dayone:[{
             selector:'#matches',
-            templateUrl:'matches/dayone.html'
+            templateUrl:'matches/dayOne.html'
           }],
           daytwo:[{
             selector:'#matches',
-            templateUrl:'matches/daytwo.html'
+            templateUrl:'matches/dayTwo.html'
           }],
           daythree:[{
             selector:'#matches',
-            templateUrl:'matches/daythree.html'
+            templateUrl:'matches/dayThree.html'
           }],
           dayfour:[{
             selector:'#matches',
-            templateUrl:'matches/dayfour.html'
+            templateUrl:'matches/dayFour.html'
           }],
           dayfive:[{
             selector:'#matches',
-            templateUrl:'matches/dayfive.html'
+            templateUrl:'matches/dayFive.html'
           }],
           daysix:[{
             selector:'#matches',
-            templateUrl:'matches/daysix.html'
+            templateUrl:'matches/daySix.html'
           }],
           dayseven:[{
             selector:'#matches',
-            templateUrl:'matches/dayseven.html'
+            templateUrl:'matches/daySeven.html'
           }],
           dayeight:[{
             selector:'#matches',
-            templateUrl:'matches/dayeight.html'
+            templateUrl:'matches/dayEight.html'
           }],          
           defaultView: {
               view: 'dayone'
