--- a/matches/daysix.html
+++ b/matches/daysix.html
@@ -4,6 +4,10 @@
   <br>
   <br>
 <div id="wrapper" class='card animated fadeIn'>
+  <div class="date">
+    <h1>Saturday Aug 14th</h1>
+  </div>
+  <br>
   <table class="rwd-table">
     <tr>
       <th class='team-heading'>Game</th>
