--- a/matches/dayEight.html
+++ b/matches/dayEight.html
@@ -5,7 +5,7 @@
   <br>
 <div id="wrapper" class='card animated fadeIn'>
   <div class="date">
-    <h1>Saturday Aug 21st</h1>
+    <h1>Sunday Aug 20th</h1>
   </div>
   <br>
   <table class="rwd-table">
