--- a/matches/daysix.html
+++ b/matches/daysix.html
@@ -1,78 +1,91 @@
-
 <div id="matches">
-  <br>
-  <br>
-  <br>
-<div id="wrapper" class='card animated fadeIn'>
-  <div class="date">
-    <h1>Sunday Aug 13th</h1>
-  </div>
-  <br>
-  <table class="rwd-table">
-    <tr>
-      <th class='team-heading'>Game</th>
-      <th></th>
-      <th>Time</th>
-    </tr>
-    <tr>
-      <td class='team' data-th="Team">
-        <p>Game 1</p>
-      </td>
-      <td data-th="Match One"></td>
-      <td data-th="Match Two">12:00pm - 1:30pm</td>
-    </tr>
-    <tr>
-      <td class='team' data-th="Team">
-        <p>Game 2</p>
-      </td>
-      <td data-th="Match One"></td>
-      <td data-th="Match Two">1:30pm - 3:00pm</td>
-    </tr>
-    <tr>
-      <td class='team' data-th="Team">
-        <p>Game 3</p>
-      </td>
-      <td data-th="Match One"></td>
-      <td data-th="Match Two">3:00pm - 4:30pm</td>
-    </tr>
-    <tr>
-      <td class='team' data-th="Team">
-        <p>Game 4</p>
-      </td>
-      <td data-th="Match One"></td>
-      <td data-th="Match Two">4:30pm - 6:00pm</td>
-    </tr>
-    <tr>
-      <td class='team' data-th="Team">
-        <p>Game 1B</p>
-      </td>
-      <td data-th="Match One"></td>
-      <td data-th="Match Two">12:00pm - 1:30pm</td>
-    </tr>
-    <tr>
-      <td class='team' data-th="Team">
-        <p>Game 2B</p>
-      </td>
-      <td data-th="Match One"></td>
-      <td data-th="Match Two">1:30pm - 3:00pm</td>
-    </tr>
-    <tr>
-      <td class='team' data-th="Team">
-        <p>Game 3B</p>
-      </td>
-      <td data-th="Match One"></td>
-      <td data-th="Match Two">3:00pm - 4:30pm</td>
-    </tr>
-    <tr>
-      <td class='team' data-th="Team">
-        <p>Game 4B</p>
-      </td>
-      <td data-th="Match One"></td>
-      <td data-th="Match Two">4:30pm - 6:00pm</td>
-    </tr>
-  </table>
-</div>
-<br>
-<br>
-<br>
+
+    <div class="animated slideInLeft group">
+        <div class="date">
+            <h1>Saturday Aug 13th</h1>
+            <h3>(Group B)</h3></div>
+        <div class="match">
+            <div class="main">
+                <div class="score_left">
+                    <div class="left_wrapper">
+                        <h3>SOUTH SUDAN</h3>
+                        <img src="https://image.flaticon.com/icons/svg/197/197476.svg">
+                    </div>
+                </div>
+                <div class="info">
+                    <h2>0</h2>
+                    <h2>VS</h2>
+                    <h2>0</h2>
+                </div>
+                <div class="score_right">
+                    <div class="right_wrapper">
+                        <img src="https://image.flaticon.com/icons/svg/197/197610.svg">
+                        <h3>HONDURAS</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="footer">
+                <div class="location">
+                    <h3>3:30pm - 5:00pm</h3>
+                </div>
+            </div>
+        </div>
+        <div class="match">
+            <div class="main">
+                <div class="score_left">
+                    <div class="left_wrapper">
+                        <h3>SOMALIA</h3>
+                        <img src="https://image.flaticon.com/icons/svg/197/197438.svg">
+                    </div>
+                </div>
+                <div class="info">
+                    <h2>0</h2>
+                    <h2>VS</h2>
+                    <h2>0</h2>
+                </div>
+                <div class="score_right">
+                    <div class="right_wrapper">
+                        <img src="https://image.flaticon.com/icons/svg/197/197531.svg">
+                        <h3>CAMEROON</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="footer">
+                <div class="location">
+                    <h3>5:00pm - 6:30pm</h3>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="animated slideInLeft group">
+        <div class="date">
+            <h1>Saturday Aug 13th</h1>
+            <h3>(Group C)</h3></div>
+        <div class="match">
+            <div class="main">
+                <div class="score_left">
+                    <div class="left_wrapper">
+                        <h3>GUATEMALA</h3>
+                        <img src="https://image.flaticon.com/icons/svg/197/197597.svg">
+                    </div>
+                </div>
+                <div class="info">
+                    <h2>0</h2>
+                    <h2>VS</h2>
+                    <h2>0</h2>
+                </div>
+                <div class="score_right">
+                    <div class="right_wrapper">
+                        <img src="https://image.flaticon.com/icons/svg/197/197397.svg">
+                        <h3>MEXICO</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="footer">
+                <div class="location">
+                    <h3>2:00pm - 3:30pm</h3>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
