--- a/matches/daytwo.html
+++ b/matches/daytwo.html
@@ -1,165 +1,96 @@
 <div id="matches">
 
-<div class="animated slideInLeft group">
-  <div class="date">
-    <h1>Sunday July 30th</h1>
-  <h3>(Group A)</h3></div>
-<div class="match">
-    <div class="main">
-        <div class="score_left">
-            <div class="left_wrapper">
-                <h3>EL SALVADOR</h3>
-                <img src="https://image.flaticon.com/icons/svg/197/197622.svg">
+    <div class="animated slideInLeft group">
+        <div class="date">
+            <h1>Sunday July 30th</h1>
+            <h3>(Group A)</h3></div>
+        <div class="match">
+            <div class="main">
+                <div class="score_left">
+                    <div class="left_wrapper">
+                        <h3>NIGERIA</h3>
+                        <img src="https://image.flaticon.com/icons/svg/197/197627.svg">
+                    </div>
+                </div>
+                <div class="info">
+                    <h2>0</h2>
+                    <h2>VS</h2>
+                    <h2>2</h2>
+                </div>
+                <div class="score_right">
+                    <div class="right_wrapper">
+                        <img src="https://image.flaticon.com/icons/svg/197/197519.svg">
+                        <h3>BURKINA FASO</h3>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="info">
-            <h2>0</h2>
-            <h2>VS</h2>
-            <h2>0</h2>
-        </div>
-        <div class="score_right">
-            <div class="right_wrapper">
-                <img src="https://image.flaticon.com/icons/svg/197/197519.svg">
-                <h3>BURKINA FASO</h3>
-            </div>
-        </div>
-    </div>
-    <div class="footer">
-        <div class="location">
-            <h3>2:00pm - 3:30pm</h3>
-        </div>
-    </div>
-</div><div class="match">
-    <div class="main">
-        <div class="score_left">
-            <div class="left_wrapper">
-                <h3>CUBA</h3>
-                <img src="https://image.flaticon.com/icons/svg/197/197508.svg">
-            </div>
-        </div>
-        <div class="info">
-            <h2>0</h2>
-            <h2>VS</h2>
-            <h2>0</h2>
-        </div>
-        <div class="score_right">
-            <div class="right_wrapper">
-                <img src="https://image.flaticon.com/icons/svg/197/197484.svg">
-                <h3>USA</h3>
+            <div class="footer">
+                <div class="location">
+                    <h3></h3>
+                </div>
             </div>
         </div>
     </div>
-    <div class="footer">
-        <div class="location">
-            <h3>3:30pm - 5:00pm</h3>
-        </div>
-    </div>
-</div></div><div class="animated slideInLeft group">
-  <div class="date">
-    <h1>Sunday July 30th</h1>
-  <h3>(Group B)</h3></div>
-<div class="match">
-    <div class="main">
-        <div class="score_left">
-            <div class="left_wrapper">
-                <h3>DJIBOUTI</h3>
-                <img src="https://image.flaticon.com/icons/svg/197/197425.svg">
+    <div class="animated slideInLeft group">
+        <div class="date">
+            <h1>Sunday July 30th</h1>
+            <h3>(Group B)</h3></div>
+        <div class="match">
+            <div class="main">
+                <div class="score_left">
+                    <div class="left_wrapper">
+                        <h3>CAMEROON</h3>
+                        <img src="https://image.flaticon.com/icons/svg/197/197531.svg">
+                    </div>
+                </div>
+                <div class="info">
+                    <h2>4</h2>
+                    <h2>VS</h2>
+                    <h2>1</h2>
+                </div>
+                <div class="score_right">
+                    <div class="right_wrapper">
+                        <img src="https://image.flaticon.com/icons/svg/197/197610.svg">
+                        <h3>HONDURAS</h3>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="info">
-            <h2>0</h2>
-            <h2>VS</h2>
-            <h2>0</h2>
-        </div>
-        <div class="score_right">
-            <div class="right_wrapper">
-                <img src="https://image.flaticon.com/icons/svg/197/197473.svg">
-                <h3>VIETNAM</h3>
-            </div>
-        </div>
-    </div>
-    <div class="footer">
-        <div class="location">
-            <h3>2:00pm - 3:30pm</h3>
-        </div>
-    </div>
-</div><div class="match">
-    <div class="main">
-        <div class="score_left">
-            <div class="left_wrapper">
-                <h3>CAMEROON</h3>
-                <img src="https://image.flaticon.com/icons/svg/197/197531.svg">
-            </div>
-        </div>
-        <div class="info">
-            <h2>0</h2>
-            <h2>VS</h2>
-            <h2>0</h2>
-        </div>
-        <div class="score_right">
-            <div class="right_wrapper">
-                <img src="https://image.flaticon.com/icons/svg/197/197597.svg">
-                <h3>GUATEMALA</h3>
+            <div class="footer">
+                <div class="location">
+                    <h3></h3>
+                </div>
             </div>
         </div>
     </div>
-    <div class="footer">
-        <div class="location">
-            <h3>3:30pm - 5:00pm</h3>
-        </div>
-    </div>
-</div></div><div class="animated slideInLeft group">
-  <div class="date">
-    <h1>Sunday July 30th</h1>
-  <h3>(Group C)</h3></div>
-<div class="match">
-    <div class="main">
-        <div class="score_left">
-            <div class="left_wrapper">
-                <h3>BRAZIL</h3>
-                <img src="https://image.flaticon.com/icons/svg/197/197386.svg">
+    <div class="animated slideInLeft group">
+        <div class="date">
+            <h1>Sunday July 30th</h1>
+            <h3>(Group C)</h3></div>
+        <div class="match">
+            <div class="main">
+                <div class="score_left">
+                    <div class="left_wrapper">
+                        <h3>MEXICO</h3>
+                        <img src="https://image.flaticon.com/icons/svg/197/197397.svg">
+                    </div>
+                </div>
+                <div class="info">
+                    <h2>3</h2>
+                    <h2>VS</h2>
+                    <h2>3</h2>
+                </div>
+                <div class="score_right">
+                    <div class="right_wrapper">
+                        <img src="https://image.flaticon.com/icons/svg/197/197443.svg">
+                        <h3>TOGO</h3>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="info">
-            <h2>0</h2>
-            <h2>VS</h2>
-            <h2>0</h2>
-        </div>
-        <div class="score_right">
-            <div class="right_wrapper">
-                <img src="https://image.flaticon.com/icons/svg/197/197610.svg">
-                <h3>HONDURAS</h3>
-            </div>
-        </div>
-    </div>
-    <div class="footer">
-        <div class="location">
-            <h3>5:00pm - 6:30pm</h3>
-        </div>
-    </div>
-</div><div class="match">
-    <div class="main">
-        <div class="score_left">
-            <div class="left_wrapper">
-                <h3>TOGO</h3>
-                <img src="https://image.flaticon.com/icons/svg/197/197443.svg">
-            </div>
-        </div>
-        <div class="info">
-            <h2>0</h2>
-            <h2>VS</h2>
-            <h2>0</h2>
-        </div>
-        <div class="score_right">
-            <div class="right_wrapper">
-                <img src="https://image.flaticon.com/icons/svg/197/197397.svg">
-                <h3>MEXICO</h3>
+            <div class="footer">
+                <div class="location">
+                    <h3></h3>
+                </div>
             </div>
         </div>
     </div>
-    <div class="footer">
-        <div class="location">
-            <h3>5:00pm - 6:30pm</h3>
-        </div>
-    </div>
-</div></div></div>
+</div>
