--- a/matches/daythree.html
+++ b/matches/daythree.html
@@ -8,8 +8,8 @@
         <div class="main">
           <div class="score_left">
             <div class="left_wrapper">
-              <h3>CUBA</h3>
-              <img src="https://image.flaticon.com/icons/svg/197/197508.svg">
+              <h3>EL SALVADOR</h3>
+              <img src="https://image.flaticon.com/icons/svg/197/197622.svg">
             </div>
           </div>
           <div class="info">
@@ -19,8 +19,8 @@
           </div>
           <div class="score_right">
             <div class="right_wrapper">
-              <img src="https://image.flaticon.com/icons/svg/197/197438.svg">
-              <h3>SOMALIA</h3>
+              <img src="https://image.flaticon.com/icons/svg/197/197627.svg">
+              <h3>NIGERIA</h3>
             </div>
           </div>
         </div>
@@ -52,63 +52,6 @@
       </div>
       <div class="footer">
         <div class="location">
-          <h3>2:30pm - 5:00pm</h3>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="animated slideInLeft group">
-    <div class="date">
-      <h1>Saturday Aug 5th</h1>
-      <h3>(Group B)</h3></div>
-    <div class="match">
-      <div class="main">
-        <div class="score_left">
-          <div class="left_wrapper">
-            <h3>VIETNAM</h3>
-            <img src="https://image.flaticon.com/icons/svg/197/197473.svg">
-          </div>
-        </div>
-        <div class="info">
-          <h2>0</h2>
-          <h2>VS</h2>
-          <h2>0</h2>
-        </div>
-        <div class="score_right">
-          <div class="right_wrapper">
-            <img src="https://image.flaticon.com/icons/svg/197/197597.svg">
-            <h3>GUATEMALA</h3>
-          </div>
-        </div>
-      </div>
-      <div class="footer">
-        <div class="location">
-          <h3>2:00pm - 3:30pm</h3>
-        </div>
-      </div>
-    </div>
-    <div class="match">
-      <div class="main">
-        <div class="score_left">
-          <div class="left_wrapper">
-            <h3>CAMEROON</h3>
-            <img src="https://image.flaticon.com/icons/svg/197/197531.svg">
-          </div>
-        </div>
-        <div class="info">
-          <h2>0</h2>
-          <h2>VS</h2>
-          <h2>0</h2>
-        </div>
-        <div class="score_right">
-          <div class="right_wrapper">
-            <img src="https://image.flaticon.com/icons/svg/197/197627.svg">
-            <h3>NIGERIA</h3>
-          </div>
-        </div>
-      </div>
-      <div class="footer">
-        <div class="location">
           <h3>3:30pm - 5:00pm</h3>
         </div>
       </div>
@@ -122,45 +65,19 @@
       <div class="main">
         <div class="score_left">
           <div class="left_wrapper">
-            <h3>MEXICO</h3>
+            <h3>DJIBOUTI</h3>
+            <img src="https://image.flaticon.com/icons/svg/197/197425.svg">
+          </div>
+        </div>
+        <div class="info">
+          <h2>0</h2>
+          <h2>VS</h2>
+          <h2>0</h2>
+        </div>
+        <div class="score_right">
+          <div class="right_wrapper">
             <img src="https://image.flaticon.com/icons/svg/197/197397.svg">
-          </div>
-        </div>
-        <div class="info">
-          <h2>0</h2>
-          <h2>VS</h2>
-          <h2>0</h2>
-        </div>
-        <div class="score_right">
-          <div class="right_wrapper">
-            <img src="https://image.flaticon.com/icons/svg/197/197610.svg">
-            <h3>HONDURAS</h3>
-          </div>
-        </div>
-      </div>
-      <div class="footer">
-        <div class="location">
-          <h3>5:00pm - 6:30pm</h3>
-        </div>
-      </div>
-    </div>
-    <div class="match">
-      <div class="main">
-        <div class="score_left">
-          <div class="left_wrapper">
-            <h3>TOGO</h3>
-            <img src="https://image.flaticon.com/icons/svg/197/197443.svg">
-          </div>
-        </div>
-        <div class="info">
-          <h2>0</h2>
-          <h2>VS</h2>
-          <h2>0</h2>
-        </div>
-        <div class="score_right">
-          <div class="right_wrapper">
-            <img src="https://image.flaticon.com/icons/svg/197/197476.svg">
-            <h3>SOUTH SUDAN</h3>
+            <h3>MEXICO</h3>
           </div>
         </div>
       </div>
