--- a/stats.html
+++ b/stats.html
@@ -1,4 +1,4 @@
-<a class="navbar-brand" href="http://mydestinatiorg.presencehost.net/">Home</a><!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -19,7 +19,7 @@
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation<dev/span>
+            <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -29,8 +29,8 @@
         <div id="navbar" class=" navbar-right navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="/">MATCHES</a></li>
-            <li class="active"><a href="/stats.html">STATS</a></li>
-            <li><a href="/standings.html">STANDINGS</a></li>
+            <li><a href="/stats.html">STATS</a></li>
+            <li class="active"><a href="/standings.html">STANDINGS</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -83,7 +83,7 @@
               <td data-th="Match Two">0</td>
               <td data-th="Match Three">0</td>
               <td data-th="Match Four">0</td>
-            </tr>     
+            </tr>
             <tr>
               <td class='team' data-th="Team">
                 <img src="https://image.flaticon.com/icons/svg/197/197484.svg" />
@@ -113,7 +113,7 @@
               <td data-th="Match Two">0</td>
               <td data-th="Match Three">0</td>
               <td data-th="Match Four">0</td>
-            </tr>   
+            </tr>
             <tr>
               <td class='team' data-th="Team">
                 <img src="https://image.flaticon.com/icons/svg/197/197627.svg" />
@@ -123,7 +123,7 @@
               <td data-th="Match Two">0</td>
               <td data-th="Match Three">0</td>
               <td data-th="Match Four">0</td>
-            </tr>    
+            </tr>
             <tr>
               <td class='team' data-th="Team">
                 <img src="https://image.flaticon.com/icons/svg/197/197425.svg" />
@@ -133,7 +133,7 @@
               <td data-th="Match Two">0</td>
               <td data-th="Match Three">0</td>
               <td data-th="Match Four">0</td>
-            </tr> 
+            </tr>
             <tr>
               <td class='team' data-th="Team">
                 <img src="https://image.flaticon.com/icons/svg/197/197597.svg" />
@@ -143,7 +143,7 @@
               <td data-th="Match Two">0</td>
               <td data-th="Match Three">0</td>
               <td data-th="Match Four">0</td>
-            </tr>             
+            </tr>
             <tr>
               <td class='team' data-th="Team">
                 <img src="https://image.flaticon.com/icons/svg/197/197531.svg" />
@@ -153,7 +153,7 @@
               <td data-th="Match Two">0</td>
               <td data-th="Match Three">0</td>
               <td data-th="Match Four">0</td>
-            </tr>      
+            </tr>
             <tr>
               <td class='team' data-th="Team">
                 <img src="https://image.flaticon.com/icons/svg/197/197610.svg" />
@@ -163,7 +163,7 @@
               <td data-th="Match Two">0</td>
               <td data-th="Match Three">0</td>
               <td data-th="Match Four">0</td>
-            </tr>  
+            </tr>
             <tr>
               <td class='team' data-th="Team">
                 <img src="https://image.flaticon.com/icons/svg/197/197476.svg" />
@@ -183,7 +183,7 @@
               <td data-th="Match Two">0</td>
               <td data-th="Match Three">0</td>
               <td data-th="Match Four">0</td>
-            </tr> 
+            </tr>
             <tr>
               <td class='team' data-th="Team">
                 <img src="https://image.flaticon.com/icons/svg/197/197397.svg" />
@@ -193,7 +193,7 @@
               <td data-th="Match Two">0</td>
               <td data-th="Match Three">0</td>
               <td data-th="Match Four">0</td>
-            </tr> 
+            </tr>
             <tr>
               <td class='team' data-th="Team">
                 <img src="https://image.flaticon.com/icons/svg/197/197443.svg" />
@@ -203,7 +203,7 @@
               <td data-th="Match Two">0</td>
               <td data-th="Match Three">0</td>
               <td data-th="Match Four">0</td>
-            </tr>                                                                                                                                     
+            </tr>
           </table>
         </div>
       </div>
